# spf-runner

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  flake.nix
.github/workflows/: _build-binaries.yml  _build-wheels.yml  build.yml  python.yml  release.yml  rust.yml  wheels.yml
bench/: README.md
bench/greater_than/: .gitignore  Makefile  README.md  bench.py  greater_than.c
elf_validator/: Cargo.toml
elf_validator/src/: main.rs
elf_validator/tests/: test_failure.rs  test_success.rs
elf_validator/tests/data/: inc.program
example/: .gitignore  README.md  add.c  greater_than.c
fhe-programs/src/: Makefile  test_programs.c
program_runner/: Cargo.toml
program_runner/src/: cli.rs  error.rs  gas.rs  io.rs  lib.rs  loader.rs  main.rs  memory.rs  processor.rs  types.rs  wire.rs
program_runner/tests/: setup.rs  test_failure.rs  test_success.rs
program_runner/tests/data/: illegal.program
scripts/: integration_test.py
sunscreen_fhe/: Cargo.toml  README.md  RELEASE.md  pyproject.toml
sunscreen_fhe/python/sunscreen_fhe/: __init__.py
sunscreen_fhe/src/: lib.rs  validation.rs
sunscreen_fhe/tests/: conftest.py  test_e2e.py  test_encryption.py  test_keys.py  test_parameters.py  test_validation.py
tfhe_client/: Cargo.toml  README.md  pyproject.toml
tfhe_client/.cargo/: config.toml
tfhe_client/python/tfhe_client/: __init__.py  _native.pyi  builder.py  outputs.py  parameters.py
tfhe_client/src/: ciphertext.rs  keys.rs  lib.rs  parameters.rs  validation.rs
tfhe_client/tests/: conftest.py  test_e2e.py  test_encryption.py  test_keys.py  test_parameters.py  test_validation.py
