[package]
name = "program_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
parasol_cpu = { workspace = true }
parasol_runtime = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
