[package]
name = "sunscreen_fhe"
version = "0.1.0"
edition = "2021"
description = "Python client for FHE program runner"
license = "MIT"

[lib]
name = "sunscreen_fhe"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
pyo3.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true

parasol_runtime.workspace = true
program_runner = { path = "../program_runner" }

[dev-dependencies]
tempfile.workspace = true
