[project]
name = "sunscreen-fhe"
version = "0.1.0"
description = "Python client for FHE program runner"
authors = [{name = "Sunscreen", email = "hello@sunscreen.tech"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["fhe", "homomorphic-encryption", "cryptography", "parasol", "tfhe", "privacy"]
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/spf-runner"
documentation = "https://docs.sunscreen.tech"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security :: Cryptography",
]
# Zero runtime dependencies
dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/Sunscreen-tech/spf-runner/issues"

# Dev dependencies are managed via [dependency-groups] for uv

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "sunscreen_fhe._native"
strip = true

[tool.uv]
cache-keys = [
    {file = "pyproject.toml"},
    {file = "Cargo.toml"},
    {file = "Cargo.lock"},
    {file = "src/**/*.rs"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "maturin>=1.5",
    "msgpack>=1.1.2",
    "pyright>=1.1",
    "pytest>=9.0.1",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["python/sunscreen_fhe", "tests"]
exclude = [".venv", "**/__pycache__"]
